--- a/src/styles/EmployeeList.css
+++ b/src/styles/EmployeeList.css
@@ -18,7 +18,7 @@
     display: flex;
     background: #EAF9FF 0% 0% no-repeat padding-box;
     border-radius: 90px 90px;
-    width: 20%;
+    width: 260px;
     cursor: pointer;
     text-decoration: none;
     color:#1F1F1F;
