--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -30,7 +30,7 @@ form select{
     background-color: rgb(0, 162, 255);
     color: white;
 }
-.cancel{
+.cancelb{
     background-color: white;
 }
 .buttons{
